# waitforme

./: GalleryMap.pgm  GalleryMap.yaml  GalleryMapHD.pgm  GalleryMapHD.yaml  README.md  myreal_map.pgm  myreal_map.yaml  myreal_map2.pgm  myreal_map2.yaml  package.xml  realmap.yaml  testplannotes
Documents/: RS2 Health and Safety General Risk Assessment.docx  RS2 Project Contract (2).docx  RS2 Project Contract - Updated.docx  RS2 Project Contract.docx  RS2 Technical Documentation Draft.docx  Test Plan.docx
Hallie/: GoalManager.cpp  GoalManager.h  MainExe_Utest.cpp  TurtleBot.cpp  TurtleBot.h
ISSY/: howtogit
Tom/: Guide_toGIT.txt  Guide_toTurtle.txt  Toms_plan.txt  turtle_map.pgm  turtle_map.yaml
andy/: CMakeLists.txt  How to run.txt  SubSystem test plan.txt
andy/andy_documents/: Internal Progress update.pptx
andy/src/: astar_planner.cpp  astar_planner.h  mapping.cpp  path_planner.cpp  path_planner.h  path_planner.hpp
hallie/: CMakeLists.txt  package.xml
hallie/config/: tb3_1_amcl_config.yaml  tb3_2_amcl_config.yaml  tb3_3_amcl_config.yaml  tb3_4_amcl_config.yaml  tb3_5_amcl_config.yaml
hallie/launch/: gazebo_multi_nav2_world.launch.py  multi_bot_clean.launch.py  multi_localization.launch.py
hallie/launch/nav2_bringup/: bringup_launch.py  localization_launch.py  slam_launch.py
hallie/rviz/: tb3_1_config.rviz  tb3_2_config.rviz  tb3_3_config.rviz  tb3_4_config.rviz  tb3_5_config.rviz
hallie/src/: GoalManager.cpp  GoalManager.h  MainExe_Utest.cpp  TurtleBot.cpp  TurtleBot.h  Utest_single_goal_distribution.cpp  test.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/andy/lib/andy/: path_planner
install/andy/share/andy/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/issy/lib/issy/: movementlogic
install/issy/share/ament_index/resource_index/package_run_dependencies/: issy
install/issy/share/ament_index/resource_index/parent_prefix_path/: issy
install/issy/share/issy/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/issy/share/issy/cmake/: issyConfig-version.cmake  issyConfig.cmake
install/issy/share/issy/environment/: ament_prefix_path.dsv  path.dsv
issy/: CMakeLists.txt  gptnotes  instructions for how to run  notes  package.xml
issy/launch/: multi_launch.launch.py  multi_launch.py
issy/src/: goals_service.cpp  movementlogic.cpp  movementlogic.h  proofofconcept.cpp  readytogo_service.cpp
issy/srv/: NotifyIdle.srv
log/: latest_build
logic/: CMakeLists.txt  package.xml
tom/: CMakeLists.txt  How_to_run.txt  package.xml  turtle_map2.pgm  turtle_map2.yaml
tom/launch/: ekf.yaml  ekf_launch.py  localization_launch.py  test.py
tom/src/: Detection_historical.cpp  detection.cpp  detection.h  kalman_filter_node.cpp  kalman_filter_node.h  localisation.cpp  localisation.h  localisation_initial.cpp  localization.cpp  people_detector.cpp  people_detector.h  test_opencv  test_opencv.cpp
tom/text files/: Guide_toGIT.txt  Guide_toTurtle.txt  How_to_run.txt  Toms_plan.txt
turtlebot3_multi_robot/: CMakeLists.txt  HowToRun.txt  package.xml
turtlebot3_multi_robot/launch/: gazebo_multi_nav2_world.launch.py  multi_robot_nav2_bringup.launch.py  run_test_node.launch.py  source_code_multi.launch.py
turtlebot3_multi_robot/launch/nav2_bringup/: bringup_launch.py  localization_launch.py
turtlebot3_multi_robot/params/: general_settings.yaml  nav2_params.yaml
turtlebot3_multi_robot/src/: GoalManager.cpp  GoalManager.h  MainExe_Utest.cpp  TurtleBot.cpp  TurtleBot.h  Utest_goal_reassignment.cpp  Utest_optimized_goal_assignment.cpp  Utest_single_goal_distribution.cpp  managermain.cpp
turtlebot3_multi_robot/worlds/: real_map4.pgm  real_map4.yaml  realmap.pgm
