<?xml version="1.0"?>
<package format="3">
  <name>hallie</name>
  <version>1.0.0</version>
  <description>Goal Management</description>

  <!-- Maintain your contact details -->
  <maintainer email="hallie.r.robins@student.uts.edu.au">hallie</maintainer>

  <!-- Add a license. This is a placeholder. Replace it with your actual license -->
  <license>TODO: License declaration</license>

  <!-- Declare the build tool used for this package -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Declare runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>
  
  <!-- For using launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- For accessing share directories -->
  <exec_depend>ament_index_python</exec_depend>
  
  <!-- For spawning in Gazebo -->
  <exec_depend>gazebo_ros</exec_depend>
  
  <!-- For working with TurtleBot3 and URDF -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <!-- Declare testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
