<?xml version="1.0"?>
<package format="3">
  <name>issy</name>
  <version>0.0.1</version>
  <description>Movement logic for TurtleBot in Gazebo</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
