<?xml version="1.0"?>
<package format="3">
  <name>tom</name>
  <version>0.0.1</version>
  <description>Localieation package for TurtleBot3</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>opencv4</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
    <launch>
      <launch_file>localisation_launch.py</launch_file>
    </launch>
  </export>
</package>
